# license-server/src/main/java/de/netzkronehd/license/controller/KeyGeneratorController.java
@@ -3,12 +3,14 @@ package de.netzkronehd.license.controller;
 import de.netzkronehd.license.api.server.springboot.api.KeyApi;
 import de.netzkronehd.license.api.server.springboot.models.LicenseKeyDto;
 import de.netzkronehd.license.exception.NoKeyModelException;
+import de.netzkronehd.license.exception.PermissionException;
+import de.netzkronehd.license.exception.RateLimitExceededException;
 import de.netzkronehd.license.mapper.LicenseKeyMapper;
 import de.netzkronehd.license.model.OAuth2Model;
 import de.netzkronehd.license.security.OAuth2TokenSecurity;
 import de.netzkronehd.license.service.KeyGeneratorService;
-import de.netzkronehd.license.service.KeyService;
-import jakarta.validation.Valid;
+import de.netzkronehd.license.service.RateLimitService;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,31 +21,34 @@ import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.security.NoSuchAlgorithmException;
-import java.util.List;
 
 @RestController
 @AllArgsConstructor(onConstructor_ = {@Autowired})
 @Slf4j
 @CrossOrigin
-public class KeyController implements KeyApi {
+public class KeyGeneratorController implements KeyApi {
 
-    private final KeyService keyService;
     private final LicenseKeyMapper licenseKeyMapper;
     private final KeyGeneratorService keyGeneratorService;
     private final OAuth2TokenSecurity tokenSecurity;
+    private final RateLimitService rateLimitService;
+
+    private HttpServletRequest request;
 
     @Override
-    public ResponseEntity<Void> generateKey(@Valid Integer keySize) {
+    public ResponseEntity<LicenseKeyDto> generateKey(Integer keySize) {
         final OAuth2Model model = tokenSecurity.getModel(SecurityContextHolder.getContext().getAuthentication());
         if (model == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
         if (!model.isAdmin()) return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
 
         try {
-            keyGeneratorService.generatePrivateKey(model.getSub(), keySize);
-            return ResponseEntity.ok().build();
+            rateLimitService.checkRateLimit(request.getRemoteAddr(), "KeyGeneratorController#generateKey", 1);
+            return ResponseEntity.ok(licenseKeyMapper.map(keyGeneratorService.generatePrivateKey(model.getSub(), keySize)));
         } catch (NoSuchAlgorithmException e) {
             log.error("Error while generating key", e);
             return ResponseEntity.internalServerError().build();
+        } catch (RateLimitExceededException e) {
+            return ResponseEntity.status(HttpStatus.TOO_MANY_REQUESTS).build();
         }
     }
 
@@ -54,18 +59,25 @@ public class KeyController implements KeyApi {
         if (!model.isAdmin()) return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
 
         try {
-            return ResponseEntity.ok(licenseKeyMapper.map(keyService.getLicenseKeyModel(owner)));
+            return ResponseEntity.ok(licenseKeyMapper.map(keyGeneratorService.getLicenseKeyModel(owner)));
         } catch (NoKeyModelException e) {
             return ResponseEntity.notFound().build();
         }
     }
 
     @Override
-    public ResponseEntity<List<LicenseKeyDto>> getKeys() {
+    public ResponseEntity<Void> deleteKey(String owner) {
         final OAuth2Model model = tokenSecurity.getModel(SecurityContextHolder.getContext().getAuthentication());
         if (model == null) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
         if (!model.isAdmin()) return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
 
-        return ResponseEntity.ok(licenseKeyMapper.map(keyService.getLicenseKeyModels()));
+        try {
+            keyGeneratorService.deleteKey(owner);
+            return ResponseEntity.ok().build();
+        } catch (NoKeyModelException e) {
+            return ResponseEntity.notFound().build();
+        } catch (PermissionException e) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
     }
 }
